# blake3

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deno.json  package-lock.json  package.json
.cargo/: config.toml
.changeset/: cold-humans-look.md  config.json  small-olives-drive.md  tasty-cities-joke.md  vast-adults-bake.md
.github/ISSUE_TEMPLATE/: config.yml  preapproved.md
benches/: CLAUDE.md  diff.ts  report.ts
benches/deno/: bench.ts
benches/lib/: bench_core.ts  color.ts  deno.json
benches/node/: bench.ts
benches/results/: report.md
crates/: CLAUDE.md
crates/blake3_bench_wasmtime/: Cargo.toml
crates/blake3_bench_wasmtime/src/: main.rs
crates/blake3_component/: Cargo.toml
crates/blake3_component/src/: lib.rs
crates/blake3_debug/: Cargo.toml
crates/blake3_debug/src/: main.rs
crates/blake3_wasm/: Cargo.toml  jsr.json  mod.ts  mod_node.ts  stream.ts  types.ts
crates/blake3_wasm/src/: lib.rs
crates/blake3_wasm_core/: Cargo.toml  stream.ts  types.ts
crates/blake3_wasm_core/src/: lib.rs
crates/blake3_wasm_small/: Cargo.toml  jsr.json  mod.ts  mod_node.ts
crates/blake3_wasm_small/src/: lib.rs
docs/: architecture.md
scripts/: CLAUDE.md  build_wasm.ts  compare.ts  patch_deno_compile.ts  patch_npm_package.ts  publish.ts  test_npm.js  validate_bench_results.ts  validate_deno_compile.ts  validate_wasm_size.ts
test/: test_vectors.json
wit/: CLAUDE.md  blake3.wit
