[workspace]
resolver = "2"
members = ["crates/blake3_wasm_core", "crates/blake3_wasm", "crates/blake3_wasm_small", "crates/blake3_debug", "crates/blake3_component", "crates/blake3_bench_wasmtime"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/fuzdev/blake3"

[workspace.dependencies]
blake3 = { version = "1.8.4", default-features = false }
wasmtime = "41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime-wasi = "41"
wasm-bindgen = "0.2"
wit-bindgen = "0.53"

[workspace.lints.rust]
unsafe_code = "forbid"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Enable lint groups (priority -1 so individual lints can override)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Pedantic overrides
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"

# Nursery overrides
significant_drop_tightening = "allow"

# Cargo overrides
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

# Restriction lints (panic points need explicit #[allow] with justification)
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unwrap_used = "warn"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
