[package]
name = "blake3_component"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "BLAKE3 WASI component via WIT interface"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake3 = { workspace = true, features = ["wasm32_simd"] }
wit-bindgen.workspace = true

# Cannot use `lints.workspace = true` because wit-bindgen generates #[export_name]
# and unsafe ABI stubs for the component model, requiring an unsafe_code override.
[lints.rust]
unsafe_code = "allow"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"
use_self = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

[package.metadata.component]
package = "fuzdev:blake3"

[package.metadata.component.target]
world = "blake3"
path = "../../wit"
