[package]
name = "blake3_wasm"
version.workspace = true
edition.workspace = true
description = "BLAKE3 hashing compiled to WASM"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-opt flags:
#   -O3                              Speed-optimized post-processing
#   --enable-simd + friends          Enable WASM features used by blake3's wasm32_simd code
#   --strip-producers                Remove compiler metadata custom section (~26 bytes)
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-mutable-globals", "--enable-sign-ext", "--strip-producers"]

[dependencies]
blake3_wasm_core = { path = "../blake3_wasm_core", features = ["simd"] }
wasm-bindgen.workspace = true

[lints]
workspace = true
